Make slightly more progress

--- a/index.html
+++ b/index.html
@@ -10,6 +10,47 @@
 </head>
 
 <body>
+  
+  <div class="jumbotron">
+      <!-- player 1 controls -->
+      <div class="card w-25">
+        <div class="card-header">Player 1</div>
+        <div class="card-body">
+          <h5 class="card-title">Choose one...</h5>
+          <p class="card-text">blah, blah, blah...</p>
+          <a href="#" class="btn btn-primary">Rock</a>
+          <a href="#" class="btn btn-primary">Paper</a>
+          <a href="#" class="btn btn-primary">Scissors</a>
+        </div>
+      </div>
+
+      <div class="card w-25">
+        <img class="card-img-top" src="./assets/images/rock.png" alt="Card image cap">
+        <div class="card-body">
+          <p class="card-text">You chose rock! Stupid!!</p>
+        </div>
+      </div>
+
+      <div class="card w-25">
+        <img class="card-img-top" src="./assets/images/paper.png" alt="Card image cap">
+        <div class="card-body">
+          <p class="card-text">Player 2 chose paper! Player 2 wins!!</p>
+        </div>
+      </div>
+
+      <!-- player 2 controls -->
+      <div class="card w-25">
+          <div class="card-header">Player 2</div>
+          <div class="card-body">
+            <h5 class="card-title">Choose one...</h5>
+            <p class="card-text">blah, blah, blah...</p>
+            <a href="#" class="btn btn-primary">Rock</a>
+            <a href="#" class="btn btn-primary">Paper</a>
+            <a href="#" class="btn btn-primary">Scissors</a>
+          </div>
+        </div>
+  </div>
+
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
